# IMS_2020

./: CMakeLists.txt  Makefile  README.md
doc/: czechiso.bst  doc.bib  doc.tex
src/: Car.cpp  Car.h  Chef.cpp  Chef.h  Order.cpp  Order.h  Pause.cpp  Pause.h  Refuel.cpp  Refuel.h  Shift.cpp  Shift.h  car_interruption.cpp  car_interruption.h  chef_interruption.cpp  chef_interruption.h  chew_interruption.cpp  chew_interruption.h  main.cpp
src/input_data/: input_data.cpp  input_data.h
src/intern_time/: intern_time.cpp  intern_time.h
src/simlib/: INSTALL  README  TODO  git-log.txt
src/simlib/examples/: model4.cc  multiexp.plt  procesor.cc
src/simlib/examples/reference-outputs/: README-TODO.txt  model2.out  model3.out  model4.out  model5.out  network.out  pbx.out  procesor.out
src/simlib/src/: TEST-BY.txt  _test_.cc  errors.cc  internal.h  process.cc  simlib.h  store.cc  tstat.cc  zdelay.cc
src/simlib/tests/: waituntil-test.cc
src/simlib/tests/reference-outputs/: 0-differences
