cmake_minimum_required(VERSION 3.15)
project(IMS_2020)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.idea)
include_directories(doc)
include_directories(src)
include_directories(src/simlib)
include_directories(src/simlib/examples)
include_directories(src/simlib/fuzzy)
include_directories(src/simlib/fuzzy/analyzer)
include_directories(src/simlib/src)
include_directories(src/input_data)
include_directories(src/intern_time)


add_executable(
        IMS_2020
        .idea/.gitignore
        .idea/IMS_2020.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        doc/czechiso.bst
        doc/doc.bib
        doc/doc.pdf
        doc/doc.tex
        doc/FIT_logo.pdf
        src/simlib/doc/latex/druzice.cc
        src/simlib/examples/TODO/gravity/3telesa.cpp
        src/simlib/examples/TODO/gravity/druzice.cpp
        src/simlib/examples/TODO/pendulum/kyvadlo.cpp
        src/simlib/examples/TODO/pendulum/kyvadlo3.cc
        src/simlib/examples/TODO/schema/schema.cpp
        src/simlib/examples/TODO/schema/schema2.cc
        src/simlib/examples/TODO/schema/schema2.cpp
        src/simlib/examples/TODO/silnikov2/silnikov--www-example/silnikov.cc
        src/simlib/examples/TODO/silnikov2/silnikov-m.cc
        src/simlib/examples/TODO/silnikov2/silnikov2.cc
        src/simlib/examples/TODO/silnikov2/silnikov3.cc
        src/simlib/examples/TODO/struna/struna.cc
        src/simlib/examples/TODO/vanderpol/vanderpol.cc
        src/simlib/examples/TODO/wheel/2kmit.cc
        src/simlib/examples/TODO/wheel/2kmit.cpp
        src/simlib/examples/TODO/wheel/kolo3.cpp
        src/simlib/examples/TODO/wheel/wheel.cc
        src/simlib/examples/TODO/wheel/wheel.cpp
        src/simlib/examples/TODO/ball3.cc
        src/simlib/examples/TODO/ctest4.cpp
        src/simlib/examples/TODO/ctest8.cpp
        src/simlib/examples/TODO/ctest9.cpp
        src/simlib/examples/TODO/philosophers.cc
        src/simlib/examples/TODO/rlc2.cc
        src/simlib/examples/TODO/rovnice1.cpp
        src/simlib/examples/ball.cc
        src/simlib/examples/ball2.cc
        src/simlib/examples/bessel.cc
        src/simlib/examples/ctest.cc
        src/simlib/examples/heating.cc
        src/simlib/examples/lorenz.cc
        src/simlib/examples/model2-timeout.cc
        src/simlib/examples/model2.cc
        src/simlib/examples/model3.cc
        src/simlib/examples/model4.cc
        src/simlib/examples/model5.cc
        src/simlib/examples/multiexp.cc
        src/simlib/examples/network.cc
        src/simlib/examples/pbx.cc
        src/simlib/examples/procesor.cc
        src/simlib/examples/rc.cc
        src/simlib/examples/rlc.cc
        src/simlib/examples/test3D.cc
        src/simlib/examples/wheel.cc
        src/simlib/examples/wheel2.cc
        src/simlib/fuzzy/analyzer/analyzer.h
        src/simlib/fuzzy/analyzer/fuzzyanalyzer.cc
        src/simlib/fuzzy/analyzer/fuzzyanalyzer.h
        src/simlib/fuzzy/analyzer/strx.h
        src/simlib/fuzzy/fuzzy.cc
        src/simlib/fuzzy/fuzzy.h
        src/simlib/fuzzy/fuzzyio.cc
        src/simlib/fuzzy/fuzzymf.cc
        src/simlib/fuzzy/fuzzyrul.cc
        src/simlib/fuzzy/rules.cc
        src/simlib/fuzzy/ruletree.cc
        src/simlib/src/_test_.cc
        src/simlib/src/algloop.cc
        src/simlib/src/atexit.cc
        src/simlib/src/barrier.cc
        src/simlib/src/calendar.cc
        src/simlib/src/cond.cc
        src/simlib/src/continuous.cc
        src/simlib/src/debug.cc
        src/simlib/src/delay.cc
        src/simlib/src/delay.h
        src/simlib/src/entity.cc
        src/simlib/src/error.cc
        src/simlib/src/errors.cc
        src/simlib/src/errors.h
        src/simlib/src/event.cc
        src/simlib/src/facility.cc
        src/simlib/src/fun.cc
        src/simlib/src/generr.c
        src/simlib/src/graph.cc
        src/simlib/src/histo.cc
        src/simlib/src/internal.h
        src/simlib/src/intg.cc
        src/simlib/src/link.cc
        src/simlib/src/list.cc
        src/simlib/src/name.cc
        src/simlib/src/ni_abm4.cc
        src/simlib/src/ni_abm4.h
        src/simlib/src/ni_euler.cc
        src/simlib/src/ni_euler.h
        src/simlib/src/ni_fw.cc
        src/simlib/src/ni_fw.h
        src/simlib/src/ni_rke.cc
        src/simlib/src/ni_rke.h
        src/simlib/src/ni_rkf3.cc
        src/simlib/src/ni_rkf3.h
        src/simlib/src/ni_rkf5.cc
        src/simlib/src/ni_rkf5.h
        src/simlib/src/ni_rkf8.cc
        src/simlib/src/ni_rkf8.h
        src/simlib/src/numint.cc
        src/simlib/src/object.cc
        src/simlib/src/opt-hooke.cc
        src/simlib/src/opt-param.cc
        src/simlib/src/opt-simann.cc
        src/simlib/src/optimize.h
        src/simlib/src/output1.cc
        src/simlib/src/output2.cc
        src/simlib/src/print.cc
        src/simlib/src/process.cc
        src/simlib/src/queue.cc
        src/simlib/src/random1.cc
        src/simlib/src/random2.cc
        src/simlib/src/rdtsc.h
        src/simlib/src/run.cc
        src/simlib/src/sampler.cc
        src/simlib/src/semaphor.cc
        src/simlib/src/simlib.h
        src/simlib/src/simlib2D.cc
        src/simlib/src/simlib2D.h
        src/simlib/src/simlib3D.cc
        src/simlib/src/simlib3D.h
        src/simlib/src/stat.cc
        src/simlib/src/stdblock.cc
        src/simlib/src/store.cc
        src/simlib/src/tstat.cc
        src/simlib/src/version.cc
        src/simlib/src/waitunti.cc
        src/simlib/src/zdelay.cc
        src/simlib/src/zdelay.h
        src/simlib/tests/TODO/semaphore-test.cc
        src/simlib/tests/unit/main.cc
        src/simlib/tests/unit/xnekdo99.cc
        src/simlib/tests/3d-test.cc
        src/simlib/tests/barrier-test1.cc
        src/simlib/tests/barrier-test2.cc
        src/simlib/tests/delay-test.cc
        src/simlib/tests/delay-test2.cc
        src/simlib/tests/process-test.cc
        src/simlib/tests/random-test.cc
        src/simlib/tests/sizeof-all.cc
        src/simlib/tests/test-calendar.cc
        src/simlib/tests/test-reactivate.cc
        src/simlib/tests/test1.cc
        src/simlib/tests/test2.cc
        src/simlib/tests/test3.cc
        src/simlib/tests/test4.cc
        src/simlib/tests/test5.cc
        src/simlib/tests/waituntil-test.cc
        src/simlib/tests/zdelay-test.cc
        src/input_data/input_data.h
        src/input_data/input_data.cpp
        src/intern_time/intern_time.h
        src/intern_time/intern_time.cpp
        src/main.cpp
        src/Shift.cpp
        src/Shift.h
        src/Order.cpp
        src/Order.h
        src/Refuel.cpp
        src/Refuel.h
        src/Pause.cpp
        src/Pause.h
        Makefile
        README.md)
